--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,7 @@ Grand.Web/App_Data/Download/*
 !Grand.Web/App_Data/Download/Index.htm
 Grand.Web/App_Data/TempUploads/*
 !Grand.Web/App_Data/TempUploads/Index.htm
+
+
+# Rider  Jetbrains
+.idea
